# engine-sidecar

./: Cargo.toml  config.toml
sidecar/: Cargo.toml
sidecar/src/: cli.rs  lib.rs  logger.rs  main.rs
sidecar/src/aptos/: mod.rs
sidecar/src/aptos/adapter/: mod.rs
sidecar/src/config/: engine.rs  mod.rs  server.rs
sidecar/src/engine/: mod.rs
sidecar/src/engine/adapter/: client.rs  local.rs  mod.rs  remote.rs
sidecar/src/ethereum/: mod.rs
sidecar/src/ethereum/rpc/: eth.rs  net.rs
sidecar/src/rpc/: eth.rs  mod.rs  net.rs
sidecar/src/server/: cors.rs  mod.rs  router.rs  rpc.rs
