[workspace]
resolver = "2"

members = [
    "sidecar",
    "vendor/aptos-core/api/types",
    "vendor/aptos-core/crates/aptos-crypto",
    "vendor/aptos-core/third_party/move/move-core/types",
    "vendor/reth/ethereum/primitives",
    "vendor/reth/primitives-traits",
    "vendor/reth/rpc/rpc-api",
    "vendor/reth/rpc/rpc-eth-api",
    "vendor/reth/rpc/rpc-eth-types",
    "vendor/reth/rpc/rpc-server-types",
]

[workspace.package]
authors = ["code0xff <ian.jungyong.um@gmail.com>"]
edition = "2021"
homepage = "https://github.com/NoirHQ/sidecar"
license = "Apache-2.0"
publish = false
repository = "https://github.com/NoirHQ/sidecar"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
auto_impl = "1"
axum = "0.8"
bcs = "0.1"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
ethnum = "1.5"
hashbrown = "0.15"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["client", "macros", "server"] }
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
more-asserts = "0.3"
num = "0.4"
once_cell = "1.21"
primitive-types = "0.10"
rand = "0.8"
ref-cast = "1.0"
secp256k1 = { version = "0.30", features = ["global-context", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "2"
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uint = "0.9"

# eth
alloy-consensus = "0.13"
alloy-eips = { version = "0.13", features = ["serde"] }
alloy-json-rpc = "0.13"
alloy-network = "0.13"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-rpc-types-eth = "0.13"

# reth
reth-ethereum-primitives = { path = "vendor/reth/ethereum/primitives" }
reth-primitives-traits = { path = "vendor/reth/primitives-traits" }
reth-rpc-api = { path = "vendor/reth/rpc/rpc-api" }
reth-rpc-eth-api = { path = "vendor/reth/rpc/rpc-eth-api" }
reth-rpc-eth-types = { path = "vendor/reth/rpc/rpc-eth-types" }
reth-rpc-server-types = { path = "vendor/reth/rpc/rpc-server-types" }

aptos-api-types = { path = "vendor/aptos-core/api/types" }
aptos-crypto = { path = "vendor/aptos-core/crates/aptos-crypto" }

move-core-types = { path = "vendor/aptos-core/third_party/move/move-core/types" }
