[workspace]
resolver = "2"

members = [
    "sidecar",
    "vendor/reth/crates/ethereum/primitives",
    "vendor/reth/crates/primitives-traits",
    "vendor/reth/crates/rpc/rpc-api",
    "vendor/reth/crates/rpc/rpc-eth-api",
    "vendor/reth/crates/rpc/rpc-eth-types",
    "vendor/reth/crates/rpc/rpc-server-types",
]

[workspace.package]
authors = ["code0xff <ian.jungyong.um@gmail.com>"]
edition = "2021"
homepage = "https://github.com/NoirHQ/sidecar"
license = "Apache-2.0"
publish = false
repository = "https://github.com/NoirHQ/sidecar"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
auto_impl = "1"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
ethnum = "1.5"
hashbrown = "0.15"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["client", "macros", "server"] }
jsonrpsee-core = "0.24"
jsonrpsee-types = "0.24"
more-asserts = "0.3"
num = "0.4"
once_cell = "1.21"
primitive-types = "0.10"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
ref-cast = "1.0"
reqwest = { version = "0.12", features = ["cookies", "json"] }
secp256k1 = { version = "0.30", features = ["global-context", "recovery"] }
serde = { version = "1.0", features = ["derive"] }
serde-name = "0.1"
serde_bytes = "0.11"
serde_json = "1.0"
syn = "1.0"
thiserror = "2"
tiny-keccak = { version = "2.0", features = ["keccak", "sha3"] }
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uint = "0.9"
url = "2.4"

# eth
alloy-consensus = "0.13"
alloy-eips = { version = "0.13", features = ["serde"] }
alloy-json-rpc = "0.13"
alloy-network = "0.13"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-rpc-types-eth = "0.13"

# reth
reth-ethereum-primitives = { path = "vendor/reth/crates/ethereum/primitives" }
reth-primitives-traits = { path = "vendor/reth/crates/primitives-traits" }
reth-rpc-api = { path = "vendor/reth/crates/rpc/rpc-api" }
reth-rpc-eth-api = { path = "vendor/reth/crates/rpc/rpc-eth-api" }
reth-rpc-eth-types = { path = "vendor/reth/crates/rpc/rpc-eth-types" }
reth-rpc-server-types = { path = "vendor/reth/crates/rpc/rpc-server-types" }

aptos-api-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-global-constants = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-rest-client = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }

move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
