[package]
name = "sidecar"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "sidecar"
path = "src/lib.rs"

[[bin]]
name = "sidecar"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

alloy-consensus = { workspace = true }
alloy-dyn-abi = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-serde = { workspace = true }

reth-ethereum-primitives = { workspace = true }
reth-rpc-api = { workspace = true }
reth-rpc-eth-api = { workspace = true }
reth-rpc-eth-types = { workspace = true }

aptos-api-types = { workspace = true }
aptos-global-constants = { workspace = true }
aptos-rest-client = { workspace = true }
aptos-sdk = { workspace = true }
aptos-types = { workspace = true }

move-core-types = { workspace = true }
